--- a/src/Pages/Home/Freatured/Featured.css
+++ b/src/Pages/Home/Freatured/Featured.css
@@ -1,5 +1,5 @@
 .featured {
-  background-image: url("../../assets/home/featured.jpg");
+  background-image: url("../../../assets/home/featured.jpg");
   background-position: center;
   background-attachment: fixed;
 }
